# StepTwin_server

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
docs/: android-api-handoff.md  api-contract.md  micro-routing.md  osm-walk-network.md  pedestrian-graph-data.md  pedestrian_graph_topology_viewer.html  pedestrian_graph_viewer.html  tmap-transit-api.md
scripts/: allow-api-firewall.ps1  dev_server.py  export_pedestrian_graph_viewer.py  import_osm_walk_network.py  import_seoul_walk_network.py  rebuild_pedestrian_topology.py  remove-api-firewall.ps1  run-api.ps1
src/steptwin_api/: __init__.py  main.py
src/steptwin_api/api/: router.py
src/steptwin_api/api/routes/: database_guard.py  health.py  pedestrian_graph.py  routing.py  walk_routing.py
src/steptwin_api/core/: config.py  lifespan.py
src/steptwin_api/db/: session.py
src/steptwin_api/schemas/: health.py  pedestrian_graph.py  routing.py  walk_routing.py
src/steptwin_api/services/: geometry.py  macro_routing.py  micro_routing.py  osm_walk_network.py  pedestrian_graph.py  pgrouting_micro_routing.py  routing.py  seoul_sdot_people.py  seoul_walk_network.py
tests/: conftest.py  test_config.py  test_health.py  test_micro_routing.py  test_osm_walk_network.py  test_pedestrian_graph_api.py  test_pedestrian_graph_import.py  test_pgrouting_micro_routing.py  test_routing.py  test_seoul_sdot_people.py  test_seoul_walk_network.py  test_tmap_macro_routing.py  test_vulnerability_preferences.py  test_walk_routing_api.py
