[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "steptwin-api"
version = "0.1.0"
description = "FastAPI server for the Steptwin hackathon project."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiomysql>=0.2.0",
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.41",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_configs = true
warn_unused_ignores = true
